<resources>
    <string name="app_name">אדם לומד לקרוא</string>
    <string name="hebrew_locale_code">he</string>

    <string name="next">הבא</string>
    <string name="prev">הקודם</string>

    <string name="about_title">אודות</string>

    <string name="about_version_title">גרסה</string>

    <string name="about_dev_title">פיתוח</string>
    <string name="about_dev">amaliapps: amaliagilad@gmail.com</string>

    <string name="about_icons_url_title">אייקונים</string>
    <string name="about_icons_url">Freepik from Flaticon: www.flaticon.com/authors/freepik</string>
    <string name="close">Close</string>
</resources>
